# subs

./: Cargo.toml  Dockerfile  Makefile
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20221221050617_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
