[package]
name = "subs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
         "runtime-actix-rustls",
         "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate"
]

# optimization profiles
[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = "thin"

[dev-dependencies]
reqwest = "0.11.11"
