[package]
name = "subs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.13"
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
         "runtime-actix-rustls",
         "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate"
]

# optimization profiles
[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = "thin"

[dev-dependencies]
reqwest = "0.11.11"
