[package]
name = "subs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { verison ="0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
         "runtime-actix-rustls",
         "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate"
]

# optimization profiles
[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = "thin"

[dev-dependencies]
once_cell = "1"
reqwest = "0.11.11"
